[feat] Generate project website

--- a/index.html
+++ b/index.html
@@ -1,5 +1,21 @@
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Glyphor Fuse Project</title>
-</head>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vektor Coffee</title>
+    <meta name="description" content="A raw, gritty tribute to Berlin's Mitte district. The design fuses exposed concrete textures with stark, oversized typography and high-contrast monochromatic ph" />
+    
+    <meta property="og:title" content="Vektor Coffee" />
+    <meta property="og:description" content="A raw, gritty tribute to Berlin's Mitte district. The design fuses exposed concrete textures with stark, oversized typography and high-contrast monochromatic ph" />
+    <meta property="og:type" content="website" />
+    
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Vektor Coffee" />
+    <meta name="twitter:description" content="A raw, gritty tribute to Berlin's Mitte district. The design fuses exposed concrete textures with stark, oversized typography and high-contrast monochromatic ph" />
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
+</html>
